test/TestPhases/typechecker/invalid/floatMissingType.blc
module

function floatMissingType()
    var a = -129.0
end
